--- a/static/css/index.css
+++ b/static/css/index.css
@@ -24,17 +24,38 @@
 
 .main-card-title {
   font-weight: bold;
+  color: #3d415e;
 }
-.main-content {
-  margin: 20px 15px;
+.main-block {
+  margin: 20px;
 }
 
-/* 项目经验 */
-
-.pro-duration {
+.duration {
   display: flex;
 }
 
-.pro-duration >  div:first-child {
-  margin-right: 30px;
+.duration >  div:first-child {
+  margin-right: 20px;
+  color: #b0b0b0;
+}
+
+
+/* 项目经验 */
+
+
+
+/* common */
+.font-gray {
+  color: lightseagreen;
+}
+
+.font-small {
+  font-size: 80%;
+}
+
+.divider {
+  width: auto;
+  height: 1px;
+  margin: 30px 0;
+  background-color: lightgray;
 }
